Restored server host
